Opened some java.base module's packages to make Ruby's Open3 work correctly instead of raise 'Errno::EBADF: Bad file descriptor -'